2000-08-01  Peter Williams  <peterw@helixcode.com>

	* e-msg-composer.c (set_editor_text): sizeof("--\") !=
	strlen("--\n"), breaking the test for the signature prefix.

2000-07-28  JP Rosevear  <jpr@helixcode.com>

	* e-msg-composer.c (e_msg_composer_new_with_sig_file): New
	function to create composer with sig file set.
	(e_msg_composer_get_sig_file): New function to get sig file
	(e_msg_composer_set_sig_file): New function to set sig file

2000-07-25  Michael Meeks  <michael@helixcode.com>

	* e-msg-composer.c (get_text): add textual exception printout.
	(set_editor_text): close pre tags & check for pre-existing
	sig separator.

2000-07-25  Peter Williams  <peterw@helixcode.com>

	* e-msg-composer.c (menu_file_insert_file_cb): Mark this function
	as FIXME because we're waiting for the HTML Editor Control to
	support paste commands. Also some updates for when that happens.

2000-07-24  Dan Winship  <danw@helixcode.com>

	* e-msg-composer.c: Remove GOAD support.
	(create_editor): Try to give a more helpful error message when
	failing to load the editor control.

2000-07-23  Ettore Perazzoli  <ettore@helixcode.com>

	* e-msg-composer.c (menu_format_html_cb): New callback for the
	"Send HTML" menu toggle item.
	(create_menubar_format): New.
	(create_menubar): Call it.
	(create_menubar_options): Removed.
	(init): Initialize `send_html' and `attachment_bar_visible' to
	FALSE.
	(get_signature): Add `void' to the declaration.  This is C, not
	C++.
	(menu_file_close_cb): Renamed from `exit_cb'.
	(menu_file_send_cb): Renamed from `send_cb'.
	(menu_file_save_as_cb): Renamed from `save_as_cb'.
	(menu_file_save_cb): Renamed from `save_cb'.
	(menu_file_open_cb): Renamed from `open_cb'.
	(menu_file_add_attachment_cb): Renamed from `add_attachment_cb'.
	(menu_file_insert_file_cb): Renamed from `insert_file_cb'.
	(e_msg_composer_set_send_html): New.
	(build_message): Use the `send_html' flag instead of peeking the
	`msg_format' gnome-config value directly.
