@@ -304,7 +304,7 @@ build_message (EMsgComposer *composer)
 }
 
 static char *
-get_signature (char *sigfile)
+get_signature (const char *sigfile)
 {
 	char *rawsig;
 	static char *htmlsig = NULL;
@@ -354,7 +354,7 @@ get_signature (char *sigfile)
 }
 
 static void
-set_editor_text (BonoboWidget *editor, char *sig_file, const char *text)
+set_editor_text (BonoboWidget *editor, const char *sig_file, const char *text)
 {
 	Bonobo_PersistStream persist;
 	BonoboStream *stream;
@@ -1229,7 +1229,7 @@ e_msg_composer_new (void)
  * Return value: A pointer to the newly created widget
  **/
 GtkWidget *
-e_msg_composer_new_with_sig_file (char *sig_file)
+e_msg_composer_new_with_sig_file (const char *sig_file)
 {
 	GtkWidget *new;
 
