@@ -1,3 +1,11 @@
+2000-08-01  JP Rosevear  <jpr@helixcode.com>
+
+	* e-msg-composer.h: Constify param
+
+	* e-msg-composer.c (get_signature): Constify param
+	(set_editor_text): ditto
+	(e_msg_composer_new_with_sig_file): ditto
+
 2000-08-01  Peter Williams  <peterw@helixcode.com>
 
 	* e-msg-composer.c (set_editor_text): sizeof("--\") !=
